--- a/Index.html
+++ b/Index.html
@@ -3,101 +3,118 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>OWASP Payload Search (User JSON)</title>
+  <title>OWASP Payload Search</title>
+  <meta name="description" content="Static app to load JSON of payloads and search by vulnerability name. Keep payloads local." />
   <style>
-    body { font-family: Inter, system-ui, Arial; margin: 18px; background:#f7fafc; color:#0f172a; }
-    header { display:flex; gap:12px; align-items:center; margin-bottom:14px; }
-    input, button, select, textarea { font-size:14px; padding:8px; border-radius:8px; border:1px solid #cbd5e1; }
-    .card { background:white; border-radius:10px; padding:14px; box-shadow:0 6px 16px rgba(2,6,23,0.06); margin-bottom:12px; }
-    .grid { display:grid; grid-template-columns: 1fr 320px; gap:14px; }
-    .list { max-height:420px; overflow:auto; }
-    .payload { background:#f1f5f9; padding:8px; border-radius:6px; margin-bottom:6px; font-family:monospace; white-space:pre-wrap; word-break:break-all; }
-    .muted{ color:#64748b; font-size:13px; }
-    .controls { display:flex; gap:8px; flex-wrap:wrap; margin-top:8px; }
+    :root{--bg:#f7fafc;--card:#ffffff;--muted:#64748b;--text:#0f172a}
+    html,body{height:100%;margin:0;font-family:Inter,system-ui,Arial;background:var(--bg);color:var(--text)}
+    .wrap{max-width:1100px;margin:18px auto;padding:12px}
+    header{display:flex;align-items:center;justify-content:space-between;gap:12px}
+    h1{margin:0;font-size:18px}
+    .grid{display:grid;grid-template-columns:1fr 340px;gap:14px;margin-top:12px}
+    .card{background:var(--card);border-radius:10px;padding:14px;box-shadow:0 6px 16px rgba(2,6,23,0.06)}
+    input,select,textarea,button{font-size:14px;padding:8px;border-radius:8px;border:1px solid #cbd5e1}
+    textarea{width:100%;box-sizing:border-box}
+    .muted{color:var(--muted);font-size:13px}
+    .list{max-height:520px;overflow:auto;margin-top:10px}
+    .payload{background:#f1f5f9;padding:8px;border-radius:6px;margin-bottom:8px;font-family:monospace;white-space:pre-wrap}
+    footer{margin-top:12px;font-size:13px;color:var(--muted)}
+    @media (max-width:880px){.grid{grid-template-columns:1fr}}
   </style>
 </head>
 <body>
-  <header>
-    <h1 style="margin:0;font-size:18px">OWASP Payload Search — JSON driven</h1>
-    <div class="muted">(Apni JSON upload/paste karein — main payloads provide nahi karta)</div>
-  </header>
-
-  <div class="grid">
-    <div>
-      <div class="card">
-        <strong>1) JSON upload ya paste karein</strong>
-        <div style="margin-top:8px" class="muted">Format example niche diya hai. File choose karein ya JSON paste karein.</div>
-        <div style="margin-top:8px">
-          <input id="fileInput" type="file" accept=".json" />
-        </div>
-        <div style="margin-top:8px">
-          <textarea id="pasteJson" rows="8" placeholder='Ya yahan apna JSON paste karein (example schema below)...' style="width:100%"></textarea>
-        </div>
-        <div class="controls">
-          <button id="loadPaste">Load JSON from paste</button>
-          <button id="clearData">Clear data</button>
-          <button id="downloadJson">Download current JSON</button>
-        </div>
-
-        <hr/>
-
-        <strong>2) Search by vulnerability name</strong>
-        <div style="margin-top:8px" class="controls">
-          <input id="searchInput" placeholder="Type vulnerability name (e.g., 'XSS' or 'Broken Access Control')" style="flex:1" />
-          <select id="filterSelect">
-            <option value="">— Filter: show all —</option>
-            <option value="exact">Exact name match</option>
-            <option value="partial">Partial match (default)</option>
-          </select>
-          <button id="doSearch">Search</button>
-        </div>
-
-        <div id="stats" style="margin-top:10px" class="muted">No data loaded.</div>
+  <div class="wrap">
+    <header>
+      <div>
+        <h1>OWASP Payload Search — JSON driven</h1>
+        <div class="muted">Load your JSON locally. This app does not host or fetch payloads.</div>
       </div>
+      <div class="muted">Static • Client-side • Safe</div>
+    </header>
 
-      <div class="card">
-        <strong>Results</strong>
-        <div id="results" class="list" style="margin-top:8px">
-          <div class="muted">Search results will appear here.</div>
+    <div class="grid">
+      <main>
+        <div class="card">
+          <strong>1) Upload JSON or paste it</strong>
+          <div style="margin-top:8px" class="muted">Use the schema shown in the sidebar. File upload or paste your JSON and click "Load JSON from paste".</div>
+
+          <div style="margin-top:8px">
+            <input id="fileInput" type="file" accept=".json" />
+          </div>
+
+          <div style="margin-top:8px">
+            <textarea id="pasteJson" rows="8" placeholder='Paste JSON here (see schema in sidebar)'></textarea>
+          </div>
+
+          <div style="margin-top:8px;display:flex;gap:8px;flex-wrap:wrap">
+            <button id="loadPaste">Load JSON from paste</button>
+            <button id="clearData">Clear data</button>
+            <button id="downloadJson">Download current JSON</button>
+          </div>
+
+          <hr style="margin:12px 0" />
+
+          <strong>2) Search by vulnerability</strong>
+          <div style="margin-top:8px;display:flex;gap:8px">
+            <input id="searchInput" placeholder="Type vulnerability name (e.g., XSS)" style="flex:1" />
+            <select id="filterSelect">
+              <option value="">— Filter: show all —</option>
+              <option value="exact">Exact name match</option>
+              <option value="partial">Partial match (default)</option>
+            </select>
+            <button id="doSearch">Search</button>
+          </div>
+
+          <div id="stats" style="margin-top:10px" class="muted">No data loaded.</div>
         </div>
-      </div>
-    </div>
 
-    <aside>
-      <div class="card">
-        <strong>JSON schema (example)</strong>
-        <pre style="font-size:13px; white-space:pre-wrap; word-break:break-all; margin-top:8px;">
-[
+        <div class="card" style="margin-top:12px">
+          <strong>Results</strong>
+          <div id="results" class="list" style="margin-top:8px">
+            <div class="muted">Search results will appear here.</div>
+          </div>
+        </div>
+
+        <div style="margin-top:12px" class="card">
+          <strong>Quick actions</strong>
+          <div style="margin-top:8px;display:flex;gap:8px;flex-wrap:wrap">
+            <button id="copyAll">Copy visible payloads</button>
+            <button id="expandAll">Scroll to top</button>
+          </div>
+          <div class="muted" style="margin-top:8px">To host: push this repo to GitHub and enable Pages (see README).</div>
+        </div>
+      </main>
+
+      <aside>
+        <div class="card">
+          <strong>JSON schema (example)</strong>
+          <pre style="font-size:13px;white-space:pre-wrap;word-break:break-all;margin-top:8px">[
   {
     "vulnerability": "XSS",
     "category": "A03:2021",
-    "description": "Cross-site scripting (example entry).",
+    "description": "Cross-site scripting (example).",
     "payloads": [
-      "TEST_PAYLOAD_XSS_1",
-      "TEST_PAYLOAD_XSS_2"
+      "TEST_XSS_PAYLOAD_1",
+      "TEST_XSS_PAYLOAD_2"
     ],
     "tags": ["reflected","test"]
-  },
-  {
-    "vulnerability": "SQL Injection",
-    "category": "A01:2021",
-    "description": "SQLi example",
-    "payloads": ["TEST_SQL_1","TEST_SQL_2"]
   }
-]
-        </pre>
-        <div class="muted" style="margin-top:8px">Note: Replace TEST_* values with your real payloads locally. This app does not fetch payloads from any server — everything stays in your browser.</div>
-      </div>
-
-      <div class="card">
-        <strong>Quick actions</strong>
-        <div style="margin-top:8px" class="controls">
-          <button id="copyAll">Copy visible payloads</button>
-          <button id="expandAll">Expand all</button>
+]</pre>
+          <div class="muted" style="margin-top:8px">Replace TEST_* values with your own payloads locally. Do not publish sensitive exploit payloads publicly.</div>
         </div>
-        <div style="margin-top:8px" class="muted">To make this live: push this file to a public GitHub repo and enable GitHub Pages (or host on any static hosting).</div>
-      </div>
-    </aside>
+
+        <div class="card" style="margin-top:12px">
+          <strong>Notes</strong>
+          <ul style="margin:8px 0 0 18px;color:var(--muted)">
+            <li>Everything runs in the browser — no server or backend.</li>
+            <li>JSON is held in memory; use the download button to save edits.</li>
+            <li>Keep payloads private — avoid committing exploit data to public repos.</li>
+          </ul>
+        </div>
+      </aside>
+    </div>
+
+    <footer class="muted">Made for defensive learning. Replace demo payloads with your local data.</footer>
   </div>
 
   <script>
@@ -171,10 +188,7 @@
     function runSearch(){
       const q = searchInput.value.trim();
       const mode = document.getElementById('filterSelect').value || 'partial';
-      if(!q){
-        renderResults(dataset);
-        return;
-      }
+      if(!q){ renderResults(dataset); return; }
       const out = dataset.filter(entry=>{
         if(!entry.vulnerability) return false;
         const name = entry.vulnerability.toLowerCase();
@@ -186,10 +200,7 @@
     }
 
     function renderResults(list, query=''){
-      if(!list || list.length===0){
-        results.innerHTML = `<div class="muted">No results${query?(' for "'+query+'"') : ''}.</div>`;
-        return;
-      }
+      if(!list || list.length===0){ results.innerHTML = `<div class="muted">No results${query?(' for "'+query+'"') : ''}.</div>`; return; }
       results.innerHTML = '';
       list.forEach((entry, idx)=>{
         const wrap = document.createElement('div');
@@ -206,7 +217,6 @@
           wrap.appendChild(desc);
         }
 
-        // payloads
         const payloads = Array.isArray(entry.payloads) ? entry.payloads : [];
         const pcontainer = document.createElement('div');
         pcontainer.style.marginTop='10px';
@@ -220,14 +230,19 @@
           payloads.forEach((p, i)=>{
             const pdiv = document.createElement('div');
             pdiv.className = 'payload';
-            pdiv.textContent = p;
             // copy button
             const copyBtn = document.createElement('button');
             copyBtn.textContent = 'Copy';
             copyBtn.style.float='right';
             copyBtn.style.marginLeft='8px';
             copyBtn.onclick = ()=>{ navigator.clipboard.writeText(p).then(()=>{ copyBtn.textContent='Copied'; setTimeout(()=>copyBtn.textContent='Copy',900); }); };
-            pdiv.prepend(copyBtn);
+            pdiv.appendChild(copyBtn);
+
+            const pre = document.createElement('div');
+            pre.style.marginTop='6px';
+            pre.textContent = p;
+            pdiv.appendChild(pre);
+
             pcontainer.appendChild(pdiv);
           });
         }
@@ -238,33 +253,24 @@
     }
 
     copyAllBtn.addEventListener('click', ()=>{
-      // copy all visible payloads
-      const visible = results.querySelectorAll('.payload');
+      const visible = results.querySelectorAll('.payload div');
       if(visible.length===0) return alert('No payloads visible to copy.');
       let text = '';
-      visible.forEach((d,i)=>{
-        text += d.textContent.replace('Copy','').trim() + "\\n\\n";
-      });
+      visible.forEach((d,i)=>{ text += d.textContent.trim() + "\n\n"; });
       navigator.clipboard.writeText(text).then(()=>alert('All visible payloads copied to clipboard.'));
     });
 
-    expandAllBtn.addEventListener('click', ()=>{
-      // scroll to top of results
-      results.scrollTop = 0;
-    });
+    expandAllBtn.addEventListener('click', ()=>{ results.scrollTop = 0; });
 
-    // small helper
     function escapeHtml(s){ if(!s) return ''; return s.replaceAll('&','&amp;').replaceAll('<','&lt;').replaceAll('>','&gt;'); }
 
-    // initial demo data (safe placeholders)
+    // demo placeholders
     const demo = [
       {"vulnerability":"XSS","category":"A03","description":"Demo XSS entry — use your own payloads","payloads":["TEST_XSS_PAYLOAD_1","TEST_XSS_PAYLOAD_2"]},
       {"vulnerability":"SQL Injection","category":"A01","description":"Demo SQLi entry — replace with your list","payloads":["TEST_SQLI_1","TEST_SQLI_2"]},
       {"vulnerability":"Broken Access Control","category":"A05","description":"Demo BAC entry","payloads":["TEST_BAC_1"]}
     ];
-    dataset = demo;
-    updateStats();
-    renderResults(dataset);
+    dataset = demo; updateStats(); renderResults(dataset);
   </script>
 </body>
 </html>
